# CruxIDE

./: CMakeLists.txt  README.md
include/: Core.h  Editor.h  EditorMode.h  FileUtils.h  SyntaxHighlighter.h  UIManager.h
src/: main.cpp
src/core/: Core.cpp
src/editor/: Editor.cpp
src/syntax/: SyntaxHighlighter.cpp
src/ui/: UIManager.cpp
src/utils/: FileUtils.cpp
